CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LSHBOX)

MESSAGE(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")

IF(MINGW)
    SET(SAVE_CLASS mingw)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(WIN32 AND CMAKE_CL_64)
    IF(${CMAKE_BUILD_TYPE} MATCHES "Debug")
        SET(SAVE_CLASS x64/Debug)
    ELSE()
        SET(SAVE_CLASS x64/Release)
    ENDIF()
ELSEIF(WIN32)
    IF(${CMAKE_BUILD_TYPE} MATCHES "Debug")
        SET(SAVE_CLASS x86/Debug)
    ELSE()
        SET(SAVE_CLASS x86/Release)
    ENDIF()
ELSE()
    SET(SAVE_CLASS unix)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

INCLUDE_DIRECTORIES(
    ${LSHBOX_SOURCE_DIR}/include
)

ADD_SUBDIRECTORY(tools)
#ADD_SUBDIRECTORY(matlab)
#ADD_SUBDIRECTORY(python)
